Fix issue where links are not visible in code-blocks in dark mode.

--- a/src/browser/modules/Carousel/style.less
+++ b/src/browser/modules/Carousel/style.less
@@ -298,6 +298,10 @@
     color: #c7254e;
     background-color: #f9f2f4;
     border-radius: 4px;
+
+    a {
+      color: #c7254e !important;
+    }
   }
   & figcaption {
     font-style: italic;
